1.Gopath switch to go-mod about local dependency package 2.Add redis module 3.Optimization time tools 4.Optimizing naming conventions 5.Add example module

--- a/config/config.ini
+++ b/config/config.ini
@@ -3,7 +3,8 @@ host = 10.33.6.114
 port = 3306
 username = root
 password = 123456
-database = fiction
+database = dbname
 
-[spiderUrl]
-ddxs=https://www.booktxt.net/
+[redis]
+host = 10.33.6.114:6379
+password = 123456
